--- a/css/style_resp.css
+++ b/css/style_resp.css
@@ -211,6 +211,8 @@ body {
   gap: 1.5rem;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   margin-top: 1rem;
+  margin-bottom: 3rem;
+  overflow: hidden;
 }
 
 .project {
