--- a/css/style_resp.css
+++ b/css/style_resp.css
@@ -140,7 +140,7 @@ figcaption {
   font-style: italic;
   font-size: 0.80rem;
   color: #777;
-  text-align: inline-block;
+  text-align: centre;
   padding-top: 0.5rem;
 }
 
