--- a/css/style_resp.css
+++ b/css/style_resp.css
@@ -151,6 +151,8 @@ figcaption {
 
 .rabbit-figure img {
   max-width: 100%;
+  max-height: 220px;
+  object-fit: cover;
   border-radius: 8px;
   box-shadow: inset 0 0 12px rgba(0, 0, 0, 0.3); /* inner shadow */
 }
