--- a/css/style_resp.css
+++ b/css/style_resp.css
@@ -151,7 +151,7 @@ figcaption {
 
 .rabbit-figure img {
   max-width: 100%;
-  max-height: 450px;
+  max-height: 500px;
   object-fit: cover;
   border-radius: 8px;
   box-shadow: inset 0 0 12px rgba(0, 0, 0, 0.3); /* inner shadow */
@@ -366,6 +366,15 @@ section h2 {
   font-size: 0.95rem;
 }
 
+.project p:last-of-type {
+  margin-bottom: 0.5rem;
+}
+
+.project img,
+.project figure {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
 .project img,
 .project figure {
   max-height: 220px;
@@ -374,6 +383,10 @@ section h2 {
   height: auto;
   border-radius: 8px;
   object-fit: cover;
+}
+.project figcaption {
+  margin-bottom: 0.5rem;
+  display: block;
 }
 
 .project a.cta,
