--- a/css/style_resp.css
+++ b/css/style_resp.css
@@ -321,12 +321,12 @@ section h2 {
 
 /* Dual Track section */
 #dual-track {
-  background-color: #f5f5f5;
+  /* background-color: #f5f5f5; */
 }
 
 /* AI Portfolio section */
 #ai-portfolio {
-  background-color: #e8f0fe;
+  /* background-color: #e8f0fe; */
 }
 
 /* ----------------------------------
