--- a/css/style_resp.css
+++ b/css/style_resp.css
@@ -607,6 +607,9 @@ body.dark-mode #connect a {
   z-index: 1001 !important; /* Ensure it's above other elements */
 }
 
+/* ----------------------------------
+   👣 Media query
+---------------------------------- */
 @media screen and (max-width: 600px) {
   .flex-container2 {
     flex-direction: column;
@@ -621,16 +624,21 @@ body.dark-mode #connect a {
  background-color: #444;
  color: #f6a21d;
   }
-   .topnav a:not(:first-child),
-  .topnav .button-ghost {
-    display: none;
-  }
 
+  .topnav .button-ghost { display: none;  }
+  .topnav a { display: none; }
+  .topnav .icon { display: block; }
+
+  .topnav.responsive {
+    position: relative;
+    flex-direction: column;
+  }
   .topnav.responsive a,
   .topnav.responsive .button-ghost {
-    float: none;
     display: block;
+    float: none;
     text-align: left;
+    padding: 12px 16px;
   }
 
   .topnav.responsive .icon {
