--- a/css/style_resp.css
+++ b/css/style_resp.css
@@ -352,6 +352,15 @@ section h2 {
   margin-top: 2rem;
 }
 
+/* ----------------------------------
+   📱 triple-identity 
+---------------------------------- */
+#triple-identity {
+  margin: 2rem auto;
+  max-width: 960px;
+  padding: 0 1rem;
+}
+
 
 /* ----------------------------------
    📱 darkmode adaption to sections
