--- a/css/style_resp.css
+++ b/css/style_resp.css
@@ -623,6 +623,7 @@ body.dark-mode #connect a {
 .twitter   { background: #55ACEE; }
 .linkedin  { background: #007bb5; }
 .youtube   { background: #bb1100; }
+.substack  { background: #E96412; }
 
 
 
