--- a/css/layout.css
+++ b/css/layout.css
@@ -1,4 +1,7 @@
-/* 📐 layout.css */
+/* ===================================
+📐 LAYOUT.CSS: Page structure, nav, grids
+=================================== */
+
 section {
   padding: 4rem 2rem;
   margin: 0 auto;
@@ -18,6 +21,33 @@ section h3 {
   display: inline-block;
 }
 
+/* -- topnav --*/
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  padding: 8px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #C66A53;
+  color: white;
+}
+
+.topnav .icon { display: none; }
+
+/*-- project grid --*/
 .project-grid {
   display: grid;
   gap: 1.5rem;
