--- a/css/darkmode.css
+++ b/css/darkmode.css
@@ -1,7 +1,27 @@
-/* 🌒 darkmode.css */
+/* ===================================
+🌓 DARK-MODE.CSS: Theme override
+=================================== */
 /* body.dark-mode {
   background-color: #121212;
   color: var(--color-text);
+}  */
+body.dark-mode {
+  background-color: #121212;
+  color: #e0e0e0;
+}
+
+/*
+body.dark-mode h2, body.dark-mode h3 {
+  color: #f6f6f6;
+  border-bottom-color: var(--color-accent);
+}
+*/
+body.dark-mode section h2,
+body.dark-mode h2,
+body.dark-mode h3,
+body.dark-mode .site-title {
+  color: #f6f6f6;
+  border-bottom-color: #f6a21d;
 }
 
 body.dark-mode section {
@@ -9,40 +29,15 @@ body.dark-mode section {
   color: #e0e0e0;
 }
 
-body.dark-mode h2, body.dark-mode h3 {
-  color: #f6f6f6;
-  border-bottom-color: var(--color-accent);
-}
-*/
-
-body.dark-mode .button {
-  background-color: var(--color-accent);
-  color: #fff;
-}
-
-/*
 body.dark-mode .project {
   background-color: #1e1e1e;
   color: #ddd;
   box-shadow: 0 2px 10px rgba(255,255,255,0.08);
 }
-*/
 
-/* =========
-   dark mode overrides
-   ========*/
-
-body.dark-mode {
-  background-color: #121212;
-  color: #e0e0e0;
-}
-
-body.dark-mode section h2,
-body.dark-mode h2,
-body.dark-mode h3,
-body.dark-mode .site-title {
-  color: #f6f6f6;
-  border-bottom-color: #f6a21d;
+body.dark-mode .button {
+  background-color: var(--color-accent);
+  color: #fff;
 }
 
 body.dark-mode #about,
@@ -85,12 +80,6 @@ body.dark-mode .highlight-subtitle {
 
 body.dark-mode .scroll-container {
   background-color: #1a1a1a;
-}
-
-body.dark-mode .project {
-  background-color: #1e1e1e;
-  color: #ddd;
-  box-shadow: 0 2px 10px rgba(255,255,255,0.08);
 }
 
 body.dark-mode .flex-container2,
