--- a/css/style_resp.css
+++ b/css/style_resp.css
@@ -13,6 +13,7 @@ body {
   font-size: 16px;
   line-height: 1.6;
   color: #333;
+  text-align: left; 
 }
 
 h1, h2, h3 {
@@ -351,9 +352,10 @@ section h2 {
   font-size: 2rem;
   margin-bottom: 1.5rem;
   border-bottom: 3px solid #f6a21d;
-  display: inline-block;
+  display: block; /* inline-block; */
   padding-bottom: 0.5rem;
   color: #333;
+  text-align: left; 
 }
 
 /* Dual Track section */
