--- a/css/style_resp.css
+++ b/css/style_resp.css
@@ -411,6 +411,11 @@ section h2 {
   /* background-color: #e8f0fe; */
 }
 
+.support {
+  text-align: left;
+}
+
+
 /* ----------------------------------
    📱 About |  Connect
 ---------------------------------- */
